<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.arafa.portfolio.MainActivity"
    android:orientation="vertical"
    android:background="@android:color/darker_gray">

    <TextView
        android:text="@string/my_nanodegree_apps_txt"
        android:layout_weight="0.83"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:background="@android:color/transparent" />

    <Button
        android:text="@string/pop_movies_title_txt"
        android:layout_weight="1"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/btn_pop_movies"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/holo_blue_light" />

    <Button
        android:text="@string/stock_title_txt"
        android:layout_weight="1"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/btn_stock_hawk"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/holo_blue_dark" />

    <Button
        android:text="@string/build_it_bigger_title_txt"
        android:layout_weight="1"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/btn_build_bigger"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/holo_blue_light" />

    <Button
        android:text="@string/make_app_material_title_txt"
        android:layout_weight="1"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/btn_make_material"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/holo_blue_dark" />

    <Button
        android:text="@string/go_ubiquitous_title_txt"
        android:layout_weight="1"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/btn_go_ubiquitous"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/holo_blue_light" />

    <Button
        android:text="@string/my_own_app_title_txt"
        android:layout_weight="1"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/btn_my_own_app"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorPrimaryDark"
        android:textColor="@android:color/white" />
</LinearLayout>
